--- a/spottr/app/views/devise/registrations/new.html.erb
+++ b/spottr/app/views/devise/registrations/new.html.erb
@@ -20,10 +20,12 @@
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "off" %>
   </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
+<% unless user_signed_in? %>
+    <div class="actions">
+      <%= f.submit "Sign up" %>
+    </div>
+  <% end %>
 <% end %>
+
 
 <%= render "devise/shared/links" %>
