--- a/spottr/app/views/profiles/new.html.erb
+++ b/spottr/app/views/profiles/new.html.erb
@@ -1,11 +1,5 @@
+<h2>Creating a new profile for <%= current_user.email %> </h2> 
+<%= render 'form' %>
 
 
 
-
-<%= form_for @profile, url: {action: "new"} do |f| %>
-First Name: <%=	f.text_field :first_name %>
-Last Name: <%= f.text_field :last_name %>
-Over 18? <%= f.check_box :over_18 %>
-
-
-<% end %>
