--- a/spottr/app/views/profiles/edit.html.erb
+++ b/spottr/app/views/profiles/edit.html.erb
@@ -1,4 +1,4 @@
-<h2>Update your profile </h2> 
+<h2>Update your profile <%= current_user.email %> </h2> 
 <%= render 'form' %>
 
 <%= link_to "Delete Profile", profile_path(@profile), method: :delete %>
