fixed deleting issue with profile match

--- a/spottr/app/views/matches/index.html.erb
+++ b/spottr/app/views/matches/index.html.erb
@@ -2,5 +2,10 @@
 
 <% @match.each do | match | %>
 	
-	<%= match.first_name %> <br>
+	<%= match.first_name %> 
+	<%= match.gym%>
+	<%= match.availability %>
+	<%= match.fitness_level %>
+	<%= match.over_18 %> <br>
+
 	<% end %>
