--- a/spottr/app/views/matches/index.html.erb
+++ b/spottr/app/views/matches/index.html.erb
@@ -3,7 +3,7 @@
 
 <% @match.each do | match | %>
 	
-	<%= match.first_name %> <%=link_to "Message", new_message_path %> 
+	<%= match.users[0].profile.name %> <%=link_to "Message", new_message_path %> 
 	 <br>
 
 	<% end %>
