--- a/spottr/app/views/home/home.html.erb
+++ b/spottr/app/views/home/home.html.erb
@@ -1,11 +1,6 @@
-<html>
-<head>
-	<meta charset="UTF-8">
-	<title>SPTTR|I Got You|</title>
-	
-</head>
 
-<body>
+
+
 <!-- ==========navigation bar============ -->
 
 <div class="navbar navbar-inverse navbar-twitch" role="navigation">
@@ -67,20 +62,28 @@
 				
 					<img class="banner" alt="banner" src="/assets/vintage-weights.jpg">
 				</div>
-
+<!-- ===========About/Why/Consistency========== -->
 				<div class= "row picture1">
 					<img class="about" alt="about" src="/assets/backgroundpic.jpg">
-
+						<div class="col-sm-4">
+							
+						</div>
+						<div class="col-sm-4">
+							
+						</div>
+						<div class="col-sm-4">
+							
+						</div>
 				</div>
 
 			</div>
-<!-- ===========About/Why/Consistency========== -->
+
 
 			
 			
-			<!--  -->
-</body>
-</html>
+			
+
+
 
 
 
