--- a/spottr/app/views/layouts/application.html.erb
+++ b/spottr/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Spottr</title>
   <!-- =======favicon======= -->
   <link rel="icon" type="image/png" href="/assets/favicon.jpg" />
+  <link href='https://fonts.googleapis.com/css?family=Merriweather:400,900' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
