--- a/spottr/app/views/devise/registrations/new.html.erb
+++ b/spottr/app/views/devise/registrations/new.html.erb
@@ -1,31 +1,47 @@
-<h2>Sign up</h2>
+<!DOCTYPE html>
+<html>
+<head>
+  <title></title>
+</head>
+<body class="back_pic">
+  
+    <div class="sign_in_wrapper">
+          <h2>Sign up</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
+            <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+            <%= devise_error_messages! %>
+    
+            <div class="field align-center">
+              <%= f.label :email %><br />
+              <%= f.email_field :email, autofocus: true %>
+            </div>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true %>
-  </div>
+            <div class="field align-center">
+              <%= f.label :password %>
+              <% if @minimum_password_length %>
+              <em>(<%= @minimum_password_length %> characters minimum)</em>
+              <% end %><br />
+              <%= f.password_field :password, autocomplete: "off" %>
+            </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-<% unless user_signed_in? %>
-    <div class="actions">
-      <%= f.submit "Sign up" %>
+            <div class="field align-center">
+              <%= f.label :password_confirmation %><br />
+              <%= f.password_field :password_confirmation, autocomplete: "off" %>
+            </div>
+              <% unless user_signed_in? %>
+              <div class="actions align-center">
+                <%= f.submit "Sign up" %>
+              </div>
+              <% end %>
+            <% end %>
+            <%= render "devise/shared/links" %>
     </div>
-  <% end %>
-<% end %>
 
 
-<%= render "devise/shared/links" %>
+
+
+</body>
+
+</html>
+
+
