--- a/spottr/app/views/profiles/edit.html.erb
+++ b/spottr/app/views/profiles/edit.html.erb
@@ -1,4 +1,7 @@
+
+<div class="row text-center">
 <h2>Update your profile <%= current_user.email %> </h2> 
 <%= render 'form' %>
 
 <%= link_to "Delete Profile", profile_path(@profile), method: :delete %>
+</div>
