--- a/spottr/app/views/profiles/new.html.erb
+++ b/spottr/app/views/profiles/new.html.erb
@@ -1,3 +1,4 @@
+<div class="row text-center back_pic2 profile_font">
 <h2>Creating a new profile for <%= current_user.email %> </h2> 
 <%= render 'form' %>
 
