--- a/spottr/app/views/layouts/application.html.erb
+++ b/spottr/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
 		<div class="">
 			<ul class="nav navbar-nav">
 				<li class="active">
-					<a href="#">
+					<a href="/">
 						<span class="small-nav" data-toggle="tooltip" data-placement="right" title="Home"> 
 							<span class="glyphicon glyphicon-home"></span> 
 						</span>
