--- a/spottr/app/views/profiles/edit.html.erb
+++ b/spottr/app/views/profiles/edit.html.erb
@@ -1,5 +1,5 @@
 
-<div class="row text-center">
+<div class="row text-center back_pic2 profile_font sign_in_wrapper">
 <h2>Update your profile <%= current_user.email %> </h2> 
 <%= render 'form' %>
 
