prepping for heroku

--- a/spottr/app/views/home/dashboard.html.erb
+++ b/spottr/app/views/home/dashboard.html.erb
@@ -18,23 +18,23 @@
               <div class="row2">
                 <div class="col-sm-4">
                  
-                    <div class="displayed chat_icon">
-                        <img src="/assets/chat-icon.png">
+                    <div class="chat_icon">
+                        <img src="/assets/chat-icon.png" class="center">
                         <p> Chat with your matches! </p>
 
                     </div>
                     
                 </div>
                   <div class="col-sm-4">
-                      <div class="displayed spttr_icon">
-                        <img src="/assets/spttr-logo2.png" class="img-circle">
+                      <div class="spttr_icon">
+                        <img src="/assets/spttr-logo2.png" class="img-circle center">
                         
                       </div>
                   </div>
                   
                   <div class="col-sm-4">
-                      <div class="displayed match_icon">
-                        <img src="/assets/match-icon.png">
+                      <div class="match_icon">
+                        <img src="/assets/match-icon.png" class="center">
                         <p> Find your matches!</p>
                         
                       </div>
