--- a/spottr/app/assets/stylesheets/dashboard.scss
+++ b/spottr/app/assets/stylesheets/dashboard.scss
@@ -35,5 +35,10 @@
 	height:128px;
 	width:128px;
 }
-
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 25%;
+}
 
