--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -30,7 +30,7 @@
             </div>
               <% unless user_signed_in? %>
               <div class="actions align-center">
-                <%= f.submit "Sign up" %>
+                <%= f.submit "Sign up", class: 'btn btn-default' %>
               </div>
               <% end %>
             <% end %>
