--- a/app/views/home/home.html.erb
+++ b/app/views/home/home.html.erb
@@ -7,21 +7,30 @@
 
 <!-- ===========video/picture ============ -->
 			<div class="container-fluid">
-				<div class= "row picture">
-						<%= image_tag 'vintage-weights.jpg', :class => "banner" %>
+				
+			<div class= "row row_picture" >
+					<%= image_tag '14.jpg', :class => "banner" %>
+					<img  class="web_logo" src="/assets/spttr-logo2yelow.png">
+
 					<!-- <img class="banner" alt="banner" src="/assets/vintage-weights.jpg"> -->
-				</div>
+			</div>
 <!-- ===========About/Why/Consistency========== -->
-				<div class= "row picture1">
-					<img class="about" alt="about" src="/assets/backgroundpic.jpg">
-						<div class="col-sm-4">
-							
+				<div class= "row about row_picture1">
+						<!-- <img class="about" src="/assets/backgroundpic.jpg"> -->
+						<div class="col-sm-4 text-center font1">
+						
+								
+						<i class=" fa fa-line-chart fa-4x"></i>
+						
+							<p class="text_color"> When you workout with a partner your gains are exponentially greater </p>
 						</div>
-						<div class="col-sm-4">
-							
+						<div class="col-sm-4 text-center font1">
+						<i class=" fa fa-anchor fa-4x"></i><br>
+							<p class="text_color"> If you have someone holding you accountable, you are reluctant to skip out.</p>
 						</div>
-						<div class="col-sm-4">
-							
+						<div class="col-sm-4 text-center font1">
+						<i class=" fa fa-bullseye fa-4x"></i><br>
+							<p class="text_color">Spttr connects you with a match that can assist you at the gym.</p>
 						</div>
 				</div>
 
