--- a/app/assets/stylesheets/dashboard.scss
+++ b/app/assets/stylesheets/dashboard.scss
@@ -1,39 +1,65 @@
+.container_fluid{
+	background: url(/assets/footer_lodyas.png);
+}
+
+
 .profile_pic_dashboard {
 	height:300px;
-	width:300px;
-	border-style:dashed;
-	border-color:black;
+	width:327px;
+	border-style:solid;
+	border-color:rgba(0,0,0,0.25);
+	border-size:10px;
+	background-color:#9c4274;
+	position:absolute;
+	padding-top:15%;
+	padding-left:15%;
+
 }
 .info_dashboard {
 	height:300px;
-	border-style:dashed;
-	border-color:black;
+	border-size:10px;
+	border-style:solid;
+	border-color:rgba(0,0,0,0.25);
+	background-color:#ec663c;
 }
 
 .chat_icon {
-	border-style:dashed;
-	border-color:black;
+	margin-left:15px;
+	margin-top:10px;
+	border-size:10px;
+	border-style:solid;
+	border-color:rgba(0,0,0,0.25);
 	border-size: 1px;
 	height:500px;
+	background-color:#47bbb3;
 	
 }
 .match_icon{
-	border-style:dashed;
-	border-color:black;
+	margin-right:15px;
+	margin-top:10px;
+	border-size:10px;
+	border-style:solid;
+	border-color:rgba(0,0,0,0.25);
 	height:500px;
+	background-color:#12b0c5;
 	
 }
 
 .spttr_icon{
-	border-style:dashed;
+
+	background-color:white;
 	border-color:black;
 	height:500px;
 	
 }
 
-.spttr_icon img {
-	height:128px;
-	width:128px;
+.image_size {
+	height:100px;
+	width:100px;
+	position:absolute;
+	top:8px;
+	left:12px;
+
 }
 .center {
   display: block;
@@ -41,4 +67,166 @@
   margin-right: auto;
   padding-top: 25%;
 }
+.circular {
+	margin-top: 0 auto;
+	position: relative;
+	margin-left: 35%;
+	border: solid 3px black;
+	width: 128px;
+	height: 128px;
+	border-radius: 150px;
+	-webkit-border-radius: 150px;
+	-moz-border-radius: 150px;
+	// background: url(/assets/spttr-logo2.png) center center no-repeat;
+	box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+	-webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+	-moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+	}
+	.dashboard_font{
+		font-family: 'Merriweather', serif;
+	    color:black;
+	    vertical-align: middle;
+	    font-size: 50px;
+	}
+.info_section{
+	margin-left:30px;
+	margin-right:30px;
+	margin-top:10px;
+	border-size:30px;
+	border-style:solid;
+	border-color:rgba(0,0,0,0.25);
+	background-color:#ffae19;
+	height:300px;
 
+}
+.middle_column{
+	margin-top:10px;
+	background-color:white;
+}
+.btn-label {position: relative;left: -12px;display: inline-block;padding: 6px 12px;background: rgba(0,0,0,0.15);border-radius: 3px 0 0 3px;}
+.btn-labeled {padding-top: 0;padding-bottom: 0;}
+.btn { margin-bottom:10px; }
+
+.info_font{
+	font-family: 'Merriweather', serif;
+	    color:white;
+	    font-size:115px;
+
+}
+.navbar-twitch2 {
+    position: fixed;
+    top: 0px;
+    right: 0px;
+    width: 50px;
+    height: 100%;
+    border-radius: 0px;
+    border: 0px;
+    z-index: 1030;
+    
+}
+.navbar-twitch2.open {
+    width: 240px;
+}
+.navbar-twitch2 > .container {
+    padding: 0px;
+    width: 100%;
+}
+.navbar-twitch2 .navbar-header,
+.navbar-twitch2 .navbar-brand {
+    float: none;
+    display: block;
+    width: 100%;
+    margin: 0px;
+}
+.navbar-twitch2 .navbar-brand {
+    height: 50px;   
+}
+.navbar-twitch2 > .container .navbar-brand {
+    padding: 0px;
+    margin: 0px;
+}
+.navbar-twitch2 > .container .navbar-brand > .small-nav {
+    display: block;
+}
+.navbar-twitch2 > .container .navbar-brand > .small-nav > span.logo, 
+.navbar-twitch2.open > .container .navbar-brand > .full-nav {
+    display: block;
+    font-weight: bold;
+    padding: 15px 2px 15px 3px;
+    font-size: 18pt;
+}
+.navbar-twitch2.open > .container .navbar-brand {
+    width: 100%;
+    padding: 15px 15px 60px;
+    text-align: center;
+}
+.navbar-twitch2.navbar-inverse > .container .navbar-brand > .small-nav > span.logo {
+    /*color: rgb(255, 255, 255);*/
+}
+.navbar-twitch2 .navbar-nav > li {
+    float: none;
+}
+.navbar-twitch2 > .container .full-nav {
+    display: none;
+}
+.navbar-twitch2.open > .container .full-nav {
+    display: block;
+}
+.navbar-twitch2.open > .container .small-nav {
+    display: none;
+}
+.navbar-twitch2 .navbar-collapse {
+    padding: 0px;
+}
+.navbar-twitch2 .navbar-nav {
+    float: none;
+    margin: 0px;
+}
+.navbar-twitch2 .navbar-nav > li > a {
+    padding: 0px;
+}
+.navbar-twitch2 .navbar-nav > li > a > span {
+    display: block;
+    font-size: 16pt;
+    padding: 13px 15px 13px 12px;
+}
+.navbar-twitch2 .tooltip,
+.navbar-twitch2 .tooltip .tooltip-inner {
+    max-width: auto;
+    white-space:nowrap;
+}
+.navbar-twitch2-toggle {
+    
+    top: 5px;
+    left: 55px;
+}
+.navbar-twitch2 ~ .navbar-twitch2-toggle > .nav-open {
+    display: inline-block;
+}
+.navbar-twitch2 ~ .navbar-twitch2-toggle > .nav-close {
+    display: none;
+}
+.navbar-twitch2.open ~ .navbar-twitch2-toggle {
+    left: 245px;
+}
+.navbar-twitch2.open ~ .navbar-twitch2-toggle > .nav-open {
+    display: none;
+}
+.navbar-twitch2.open ~ .navbar-twitch2-toggle > .nav-close {
+    display: inline-block;
+}
+
+
+.twitch2 #messageList li{
+	color:transparent;
+	padding:5px 5px 5px 5px;
+
+}
+.twitch2.open #messageList li{
+	color:white;
+
+}
+#messageList {
+	overflow-y: auto;
+    max-height: 500px;
+}
