--- a/app/assets/stylesheets/sign_in.scss
+++ b/app/assets/stylesheets/sign_in.scss
@@ -1,8 +1,18 @@
 .sign_in_wrapper{
 	color:#F5D04C;
 	text-align:center;
-	width:100%;
-	height:100%;
+	// width:100%;
+	// height:100%;
+     width: 300px;
+    margin: 60px auto 30px;
+    padding: 10px;
+    box-shadow: 
+        0 0 1px rgba(0, 0, 0, 0.3), 
+        0 3px 7px rgba(0, 0, 0, 0.3), 
+        inset 0 1px rgba(255,255,255,1),
+        inset 0 -3px 2px rgba(0,0,0,0.25);
+    border-radius: 5px;
+    background: rgba(255,255,255,0.7);
 
 }
 .back_pic{
