--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,40 +10,39 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<% if user_signed_in?%>
+
 	<%#= link_to "Logout", destroy_user_session_path, method: "DELETE" %>
-<% end %> 
-<div class="navbar navbar-inverse navbar-twitch" role="navigation">
+ 
+<div class="navbar navbar-inverse navbar-twitch twitch1 collapsable" role="navigation">
 	<div class="container">
 		<div class="navbar-header">
 			<a class="navbar-brand" href="#">
-				<span class="small-nav"> <span class="logo">
-					<button type="button" class="btn btn-default btn-xs navbar-twitch-toggle">
-					<span class="glyphicon glyphicon-chevron-right nav-open"></span>		
-					<span class="glyphicon glyphicon-chevron-left nav-close"></span>
-					</button> 
-
-				 </span> </span>
+				<span class="small-nav"> 
+					<span class="logo">
+						<button type="button" class="btn btn-default btn-xs navbar-twitch-toggle switch" id="twitch1" >
+							<span class="glyphicon glyphicon-chevron-right nav-open"></span>		
+							<span class="glyphicon glyphicon-chevron-left nav-close"></span>
+						</button> 
+					</span> 
+				</span>
 				<span class="full-nav">  Spttr  </span>
 			</a>
 		</div>
 		<div class="">
 			<ul class="nav navbar-nav">
 				<li class="active">
-					<a href="/">
-						<span class="small-nav" data-toggle="tooltip" data-placement="right" title="Home"> 
-							<span class="glyphicon glyphicon-home"></span> 
-						</span>
-						<span class="full-nav"> Home </span>
-					</a>
+					
+					
 				</li>
 				<li>
+					<% if !user_signed_in?%>
 					<a href="/users/sign_up">
 						<span class="small-nav" data-toggle="tooltip" data-placement="right" title="Sign Up"> 
 							<span class="fa fa-sign-in"></span> 
 						</span>
 						<span class="full-nav"> Sign Up </span>
 					</a>
+
 				</li>
 				<li>
 					<a href="/users/sign_in">
@@ -52,14 +51,26 @@
 						</span>
 						<span class="full-nav"> Log in </span>
 					</a>
+					<% end %>
 				</li>
 				<li>
+					<% if user_signed_in?%>
 					<a rel="nofollow" data-method="DELETE" href="/users/sign_out">
 						<span class="small-nav" data-toggle="tooltip" data-placement="right" title="Log out"> 
 							<span class="fa fa-sign-out"></span> 
 						</span>
 						<span class="full-nav"> Sign Out </span>
 					</a>
+					<!-- ========= Dashboard ======== -->
+					<a href="/dashboard">
+						<span class="small-nav" data-toggle="tooltip" data-placement="right" title="Dashboard"> 
+							<span class="fa fa-compass"></span> 
+						</span>
+						<span class="full-nav"> Dashboard </span>
+					</a>
+					<!-- <a href="/dashboard"> <button type="button" class= "btn btn-labeled btn-primary">
+                  <span class="btn-label"><i class="fa fa-compass"></i></span>Dashboard</button> </a> -->
+					<% end %>
 				</li>
 			</ul>
 		</div><!--/.nav-collapse -->
