--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -4,7 +4,7 @@
     <div class="col-lg-5">
         <div class="media">
             <a class="pull-left" href="#">
-                <img class="media-object dp img-circle" src="http://static1.squarespace.com/static/54cb8609e4b0c436386e7f1d/54cb88fce4b0af4c303c4ba1/54cb8a0de4b04c8e2a3d1a34/1438805250154/1.11.14+-+Fitness+Shoot+Ramsy-701-Edit.jpg?format=500w" style="width: 500px;height:500px;">
+                <img class="media-object dp img-circle" src="https://www.teachforamerica.org/sites/default/files/styles/large/public/thumbnails/image/headshot.png?itok=EW2-dSgB" style="width: 400px;height:400px;">
             </a>
             
         </div>
@@ -21,8 +21,12 @@
 					<img class="img-padding" src="/assets/gym-icon.png"><%= @profile.gym %><br><br>
 					<img class="img-padding" src="/assets/availability-icon.png"><%= @profile.availability %><br><br>
 					<img class="img-padding" src="/assets/fitness-level-icon.png"><%= @profile.fitness_level %><br><br>
-					<%= link_to "Edit Profile", edit_profile_path %>
-					<%= link_to "Dashboard", dashboard_path %>
+					<a href="/profiles/<%= current_user.id%>/edit"> <button type="button" class= "btn btn-labeled btn-info">
+                  <span class="btn-label"><i class="fa fa-pencil-square-o"></i></span>Edit Profile</button> </a>
+                  <a href="/dashboard"> <button type="button" class= "btn btn-labeled btn-primary">
+                  <span class="btn-label"><i class="fa fa-compass"></i></span>Dashboard</button> </a>
+					<!-- <%= link_to "Edit Profile", edit_profile_path %> -->
+					<!-- <%= link_to "Dashboard", dashboard_path %> -->
 				</h2></ul>
 				
 		</p>
